Fixes and Improvements

--- a/public/style.css
+++ b/public/style.css
@@ -12,12 +12,12 @@ main {
 /* start welcome animation */
 
 body.welcome {
-    background: #1fc5ee;
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
 }
 
 .welcome .splash {
+    pointer-events: none;
     height: 56px;
     padding: 0px;
     border: 130em solid #3a3dec;
@@ -33,6 +33,7 @@ body.welcome {
 }
 
 .welcome #welcome {
+    pointer-events: none;
     text-align: center;
     width: 56px;
     height: 56px;
@@ -45,7 +46,6 @@ body.welcome {
     border-radius: 50%;
     animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards, hide 2s 2.9s ease forwards;
 }
-
 
 /* moveIn */
 
